fix left-panel layout bug

--- a/django/10_1038_nchembio_1337__fallahi_sichani_2013/static/10_1038_nchembio_1337__fallahi_sichani_2013/css/scatterplot_browser.css
+++ b/django/10_1038_nchembio_1337__fallahi_sichani_2013/static/10_1038_nchembio_1337__fallahi_sichani_2013/css/scatterplot_browser.css
@@ -118,6 +118,9 @@ body,.global, .global div,.global img,.global p,.global table,.global td,
 
 #widget > table{margin-top:30px;}
 
+#left-panel{
+  width:250px;
+}
 #left-panel > div{
   margin-bottom:15px;
 }
